--- a/modules/parent/pom.xml
+++ b/modules/parent/pom.xml
@@ -17,46 +17,50 @@
 	<properties>
 		<!-- 主要依赖库的版本定义 -->
 		<springside.version>4.3.0-SNAPSHOT</springside.version>
-		<spring.version>4.1.3.RELEASE</spring.version>
-		<hibernate.version>4.3.7.Final</hibernate.version>
-		<mybatis.version>3.2.7</mybatis.version>
-		<spring-data-jpa.version>1.6.0.RELEASE</spring-data-jpa.version>
-		<tomcat-jdbc.version>7.0.57</tomcat-jdbc.version>
+		<spring.version>4.1.6.RELEASE</spring.version>
+		<hibernate.version>4.3.8.Final</hibernate.version>
+		<mybatis.version>3.2.8</mybatis.version>
+		<spring-data-jpa.version>1.8.0.RELEASE</spring-data-jpa.version>
+		<tomcat-jdbc.version>8.0.21</tomcat-jdbc.version>
 		<sitemesh.version>2.4.2</sitemesh.version>
 		<shiro.version>1.2.3</shiro.version>
 		<cxf.version>2.7.11</cxf.version>
 		<activemq.version>5.7.0</activemq.version>
 		<quartz.version>2.2.1</quartz.version>
-		<jedis.version>2.6.1</jedis.version>
-		<ehcache.version>2.6.9</ehcache.version>
-		<spymemcached.version>2.11.5</spymemcached.version>
-		<hibernate-validator.version>5.0.3.Final</hibernate-validator.version>
+		<jedis.version>2.7.0</jedis.version>
+		<ehcache.version>2.6.10</ehcache.version>
+		<spymemcached.version>2.11.7</spymemcached.version>
+		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
 		<jolokia.version>1.2.3</jolokia.version>
-		<hystrix.version>1.3.16</hystrix.version>
-		<javasimon.version>3.5.2</javasimon.version>
-		<jackson.version>2.4.4</jackson.version>
-		<slf4j.version>1.7.8</slf4j.version>
-		<logback.version>1.1.2</logback.version>
+		<hystrix.version>1.4.4</hystrix.version>
+		<javasimon.version>4.0.1</javasimon.version>
+		<jackson.version>2.5.2</jackson.version>
+		<slf4j.version>1.7.12</slf4j.version>
+		<logback.version>1.1.3</logback.version>
+		<log4jdbc.version>1.2</log4jdbc.version>
 		<httpclient.version>4.3.6</httpclient.version>
-		<commons-lang3.version>3.3.2</commons-lang3.version>
+		<commons-codec.version>1.10</commons-codec.version>
+		<commons-lang3.version>3.4</commons-lang3.version>
 		<commons-io.version>2.4</commons-io.version>
 		<guava.version>18.0</guava.version>
-		<joda-time.version>2.3</joda-time.version>
+		<joda-time.version>2.7</joda-time.version>
 		<dozer.version>5.5.1</dozer.version>
-		<freemarker.version>2.3.21</freemarker.version>
-		<aspectj.version>1.8.4</aspectj.version>
-		<junit.version>4.11</junit.version>
-		<assertj.version>1.7.0</assertj.version>
-		<mockito.version>1.10.8</mockito.version>
-		<powermock.version>1.6.0</powermock.version>
-		<selenium.version>2.42.2</selenium.version>
-		<nosqlunit.version>0.8.0</nosqlunit.version>
-		<jetty.version>8.1.16.v20140903</jetty.version>
-		<h2.version>1.3.176</h2.version>
+		<freemarker.version>2.3.22</freemarker.version>
+		<aspectj.version>1.8.5</aspectj.version>
+		<junit.version>4.12</junit.version>
+		<assertj.version>2.0.0</assertj.version>
+		<mockito.version>1.10.19</mockito.version>
+		<powermock.version>1.6.2</powermock.version>
+		<selenium.version>2.45.0</selenium.version>
+		<nosqlunit.version>0.8.1</nosqlunit.version>
+		<jetty.version>9.3.0.M2</jetty.version>
+		<h2.version>1.4.186</h2.version>
+		<javax.el.version>3.0.0</javax.el.version>
 
 		<!-- Plugin的属性 -->
+		<maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.6</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<prerequisites>
@@ -135,7 +139,7 @@
 			<!-- spring-->
 			<!-- 纯粹为了exclude commons-loging -->
 			<dependency>
-				<groupId>cn.org.springframework</groupId>
+				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
 				<version>${spring.version}</version>
 				<exclusions>
@@ -146,7 +150,7 @@
 				</exclusions>
 			</dependency>
 			<dependency>
-				<groupId>cn.org.springframework</groupId>
+				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
 				<version>${spring.version}</version>
 				<exclusions>
@@ -215,6 +219,12 @@
 				<version>${tomcat-jdbc.version}</version>
 				<scope>runtime</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.tomcat</groupId>
+				<artifactId>tomcat-juli</artifactId>
+				<version>${tomcat-jdbc.version}</version>
+				<scope>provided</scope>
+			</dependency>
 			<!-- PERSISTENCE end -->
 
 			<!-- WEB begin -->
@@ -238,7 +248,7 @@
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>javax.servlet-api</artifactId>
-				<version>3.0.1</version>
+				<version>3.1.0</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
@@ -256,6 +266,12 @@
 						<artifactId>javax.servlet-api</artifactId>
 					</exclusion>
 				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>javax.el</groupId>
+				<artifactId>javax.el-api</artifactId>
+				<version>${javax.el.version}</version>
+				<optional>true</optional>
 			</dependency>
 			<!-- WEB end -->
 
@@ -429,7 +445,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.javasimon</groupId>
-				<artifactId>javasimon-jdbc4</artifactId>
+				<artifactId>javasimon-jdbc41</artifactId>
 				<version>${javasimon.version}</version>
 			</dependency>
 			<dependency>
@@ -626,7 +642,7 @@
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpcore</artifactId>
-				<version>4.3.2</version>
+				<version>4.3.3</version>
 				<exclusions>
 					<exclusion>
 						<groupId>commons-logging</groupId>
@@ -772,13 +788,7 @@
 			<!-- jetty -->
 			<dependency>
 				<groupId>org.eclipse.jetty.aggregate</groupId>
-				<artifactId>jetty-webapp</artifactId>
-				<version>${jetty.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-jsp</artifactId>
+				<artifactId>jetty-all</artifactId>
 				<version>${jetty.version}</version>
 				<scope>test</scope>
 			</dependency>
@@ -826,7 +836,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.2</version>
+					<version>${maven-compiler-plugin.version}</version>
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
@@ -871,7 +881,7 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>cobertura-maven-plugin</artifactId>
-					<version>2.6</version>
+					<version>2.7</version>
 				</plugin>
 
 				<!-- war打包插件, 设定war包名称不带版本号 -->
@@ -990,7 +1000,7 @@
 
 				<!-- jetty -->
 				<plugin>
-					<groupId>org.mortbay.jetty</groupId>
+					<groupId>org.eclipse.jetty</groupId>
 					<artifactId>jetty-maven-plugin</artifactId>
 					<version>${jetty.version}</version>
 				</plugin>
