--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -42,6 +42,11 @@
 		<!-- Web begin -->
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<optional>true</optional>
 		</dependency>
@@ -60,6 +65,12 @@
 			<artifactId>javax.el-api</artifactId>
 		</dependency>
 		<!-- Wed end -->
+
+		<!-- template engine -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+		</dependency>
 
 		<!-- UTILS begin -->
 		<dependency>
