--- a/modules/parent/pom.xml
+++ b/modules/parent/pom.xml
@@ -46,6 +46,7 @@
 		<joda-time.version>2.7</joda-time.version>
 		<dozer.version>5.5.1</dozer.version>
 		<freemarker.version>2.3.22</freemarker.version>
+		<thymeleaf.version>2.1.3.RELEASE</thymeleaf.version>
 		<aspectj.version>1.8.5</aspectj.version>
 		<junit.version>4.12</junit.version>
 		<assertj.version>2.0.0</assertj.version>
@@ -656,6 +657,17 @@
 				<groupId>org.freemarker</groupId>
 				<artifactId>freemarker</artifactId>
 				<version>${freemarker.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.thymeleaf</groupId>
+				<artifactId>thymeleaf</artifactId>
+				<version>${thymeleaf.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.thymeleaf</groupId>
+				<artifactId>thymeleaf-spring4</artifactId>
+				<version>${thymeleaf.version}</version>
 			</dependency>
 
 			<!-- commons-pool -->
