--- a/examples/quickstart/src/main/webapp/WEB-INF/web.xml
+++ b/examples/quickstart/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://java.sun.com/xml/ns/javaee"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         version="3.0">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         version="2.5">
 	<display-name>quickstart</display-name>
 
 	<context-param>
@@ -69,6 +68,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+
 	<servlet>
 		<servlet-name>sitemesh-freemarker</servlet-name>
 		<servlet-class>org.springside.modules.security.shiro.freemarker.FreemarkerShiroDecoratorServlet</servlet-class>
@@ -80,13 +80,14 @@
 			<param-name>default_encoding</param-name>
 			<param-value>UTF-8</param-value>
 		</init-param>
-		<load-on-startup>1</load-on-startup>
+		<load-on-startup>2</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>sitemesh-freemarker</servlet-name>
 		<url-pattern>*.dec</url-pattern>
 	</servlet-mapping>
+
 
 	<servlet>
 		<servlet-name>springServlet</servlet-name>
