--- a/support/maven-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/support/maven-archetype/src/main/resources/archetype-resources/pom.xml
@@ -29,16 +29,6 @@
 		<maven>3.0.0</maven>
 	</prerequisites>
 
-	<repositories>
-		<!-- 如有Nexus私服, 取消注释并指向正确的服务器地址.
-		<repository>
-			<id>nexus</id>
-			<name>Team Nexus Repository</name>
-			<url>http://localhost:8081/nexus/content/groups/public</url>
-		</repository>
-		-->
-	</repositories>
-
 	<!-- 设定插件仓库, 如有Nexus私服, 取消注释并指向正确的服务器地址.
 	<pluginRepositories>
 		<pluginRepository>
@@ -110,9 +100,20 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>opensymphony</groupId>
 			<artifactId>sitemesh</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!-- template engine begin-->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
 		</dependency>
 
 		<dependency>
@@ -125,6 +126,8 @@
 			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
 		<!-- WEB end -->
+
+
 
 		<!-- SECURITY begin -->
 		<dependency>
@@ -386,6 +389,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
 				<configuration>
 					<check></check>
 					<instrumentation>
