--- a/support/maven-archetype/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/web.xml
+++ b/support/maven-archetype/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/web.xml
@@ -72,6 +72,25 @@
 	</filter-mapping>
 
 	<servlet>
+		<servlet-name>sitemesh-freemarker</servlet-name>
+		<servlet-class>org.springside.modules.security.shiro.freemarker.FreemarkerShiroDecoratorServlet</servlet-class>
+		<init-param>
+			<param-name>TemplatePath</param-name>
+			<param-value>/</param-value>
+		</init-param>
+		<init-param>
+			<param-name>default_encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<load-on-startup>2</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>sitemesh-freemarker</servlet-name>
+		<url-pattern>*.dec</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
 		<servlet-name>springServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
@@ -86,7 +105,7 @@
 	</servlet-mapping>
 
 	<session-config>
-		<session-timeout>20</session-timeout>
+		<session-timeout>30</session-timeout>
 	</session-config>
 
 	<error-page>
